--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-fileupload": "^1.2.1",
     "firebase": "^8.5.0",
     "firebase-admin": "^9.7.0",
+    "helmet": "^4.6.0",
     "mongoose": "^5.12.1",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7"
