--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
 PORT=3001
-Url='mongodb+srv://ines07:cr7bale11rmd@cluster0.7mpfm.mongodb.net/utap?retryWrites=true&w=majority'
+USERNAME=utap_user
+PASSWORD=utap@2021
+Url="mongodb://utap_user:Yd6!wPJp4a5?Z!Bx@localhost:27017/utap"
 apiKey= "AIzaSyBZB9bZKVAn46s44dZLJ2GReVA-N4NJ1QM"
 authDomain= "tropicobackendv2.firebaseapp.com"
 projectId= "tropicobackendv2"
