--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase-admin": "^9.7.0",
     "helmet": "^4.6.0",
     "mongoose": "^5.12.1",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "nodemon": "^2.0.7"
   }
